--- a/react_app/src/index.css
+++ b/react_app/src/index.css
@@ -5,3 +5,8 @@
 html {
   font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'
 }
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
